--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -8,7 +8,7 @@
 
 .sidebar-wrapper {
   background-color: rgba(0, 0, 0, .2);
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 0px;
   z-index: 1000;
@@ -24,9 +24,7 @@
 
 .content-wrapper {
   margin-left: 250px;
-  padding-top: 70px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 60px;
   overflow-x: hidden;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -60,8 +58,15 @@
 
 .container-fluid {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.sidebar-menu{
+  position: absolute;
+  top: 61px;
+  left: 0;
+  height: calc(100% - 61px);
 }
