--- a/src/scss/components/_aside.scss
+++ b/src/scss/components/_aside.scss
@@ -1,3 +1,7 @@
+.h-100 {
+  height: 100%;
+}
+
 .logo {
   width: 100%;
   height: 60px;
@@ -29,3 +33,36 @@
   }
 }
 
+.sidebar-menu {
+  position: absolute;
+  top: 61px;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 61px);
+  overflow-y: auto;
+}
+
+.menu-list {
+  margin: 0;
+  padding: 0;
+
+  li {
+    .nav-link {
+      padding: 0 20px;
+      height: 46px;
+      line-height: 46px;
+      display: block;
+      color: rgba(255, 255, 255, 0.5);
+      text-decoration: none;
+      border-left: 3px solid transparent;
+      transition: all 0.3s ease-in-out;
+
+      &:hover,
+      &.active {
+        color: rgba(255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255, 0.15);
+        border-left: 3px solid rgba(255, 255, 255, 0.9);
+      }
+    }
+  }
+}
