--- a/src/scss/helpers/_element-edit.scss
+++ b/src/scss/helpers/_element-edit.scss
@@ -1,7 +1,43 @@
+.el-collapse {
+  border: 0;
+}
+
 .el-collapse-item__header {
   background-color: transparent;
+  color: rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 0 0 0 12px;
 }
 
 .el-collapse-item__wrap {
   background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.el-collapse-item__content {
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0;
+}
+
+.el-card {
+  margin-bottom: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  color: rgba(255, 255, 255, 0.85);
+}
+
+.el-card__header {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+  padding: .75rem 1.25rem;
+  font-size: 14px;
+}
+
+.el-header {
+  line-height: 60px;
+  color: rgba(255, 255, 255, 0.85);
+
+  .el-dropdown {
+    color: rgba(255, 255, 255, 0.85);
+  }
 }
