--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -1,11 +1,3 @@
-.el-header {
-  padding: 0;
-}
-
-.el-aside {
-  width: 250px !important;
-}
-
 .sidebar-wrapper {
   background-color: rgba(0, 0, 0, .2);
   position: absolute;
@@ -80,6 +72,13 @@
     .header{
       margin-left: 0;
     }
+  }
+}
+
+.aside-show{
+  .sidebar-wrapper{
+    left: 0;
+    background-color: rgba(0, 0, 0, 1);
   }
 }
 
