--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,22 +1,67 @@
 @charset "UTF-8";
 
-// 主色
-$color-primary: #04BE02;
-$color-danger: #f6383a;
-$color-warning: #f60;
-$color-success: #4cd964;
+#app {
+  --color-none: transparent;
+  // 背景色
+  --color-bg: white;
+  --color-bg-0: #fff;
+  --color-bg-1: #f7f7f7;
+  --color-bg-2: #ededed;
+  --color-bg-3: #4c4c4c;
+  --color-bg-4: rgba(255, 255, 255, 0.1);
+  // 前景色
+  --color-fg: black;
+  --color-fg-0: rgba(0, 0, 0, 0.9);
+  --color-fg-1: rgba(0, 0, 0, 0.6);
+  --color-fg-2: rgba(0, 0, 0, 0.3);
+  --color-fg-3: rgba(0, 0, 0, 0.1);
+  // 常用色
+  --color-red: #F94D50;
+  --color-orange: #F47E3E;
+  --color-yellow: #F9CC62;
+  --color-green: #7EB356;
+  --color-blue-green: #8AD0BB;
+  --color-blue: #10aeff;
+  --color-queen-blue: #577590;
+  --color-indigo: #1485ee;
+  --color-purple: #6467f0;
+  --color-white: #fff;
+  --color-black: #000;
+  // 主题色
+  --color-theme-0-0: #3a8bd2;
+  --color-theme-0-1: #1b85e4;
+}
 
-$color-primary-active: #0a8ddf;
-$color-danger-active: darken($color-danger, 10%);
-$color-warning-active: darken($color-warning, 10%);
-$color-success-active: darken($color-success, 10%);
-
-$color-split: #e7e7e7;  //分割线的颜色
-$color-bg: #ffffff;
-$color-text: #3d4145; //文案色
-$color-text-secondary: #5f646e; //次级文案
-$color-text-gray: #9b9b9b; //灰色文案
-$color-text-gray-light: #EFEFF4; //更灰色文案
-
-$color-hairline: #D9D9D9;
-
+@media (prefers-color-scheme: dark) {
+  #app {
+    --color-none: transparent;
+    // 背景色
+    --color-bg: black;
+    --color-bg-0: #111111;
+    --color-bg-1: #1e1e1e;
+    --color-bg-2: #191919;
+    --color-bg-3: #404040;
+    --color-bg-4: rgba(0, 0, 0, 0.1);
+    // 前景色
+    --color-fg: white;
+    --color-fg-0: rgba(255, 255, 255, 0.9);
+    --color-fg-1: rgba(255, 255, 255, 0.6);
+    --color-fg-2: rgba(255, 255, 255, 0.3);
+    --color-fg-3: rgba(255, 255, 255, 0.1);
+    // 常用色
+    --color-red: #F94D50;
+    --color-orange: #F47E3E;
+    --color-yellow: #F9CC62;
+    --color-green: #7EB356;
+    --color-blue-green: #8AD0BB;
+    --color-blue: #10aeff;
+    --color-queen-blue: #577590;
+    --color-indigo: #1485ee;
+    --color-purple: #6467f0;
+    --color-white: #fff;
+    --color-black: #000;
+    // 主题色
+    --color-theme-0-0: #0b3566;
+    --color-theme-0-1: #1c4569;
+  }
+}
