--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -1,5 +1,5 @@
 .sidebar-wrapper {
-  background-color: rgba(0, 0, 0, .2);
+  background-color: var(--color-bg-4);
   position: absolute;
   top: 0px;
   left: 0px;
@@ -11,7 +11,7 @@
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px var(--color-bg-4);
 }
 
 .content-wrapper {
@@ -36,9 +36,9 @@
   padding: 0px 15px;
   z-index: 999;
   height: 60px;
-  background-color: rgba(0, 0, 0, .2);
-  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: var(--color-bg-4);
+  -webkit-box-shadow: 0 2px 10px var(--color-bg-4);
+  box-shadow: 0 2px 10px var(--color-bg-4);
 }
 
 .navbar-expand {
@@ -78,12 +78,24 @@
 .aside-show{
   .sidebar-wrapper{
     left: 0;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: var(--color-bg-4);
   }
 }
 
 @media only screen and (max-width: 1024px){
-  .sidebar-wrapper{
-    position: fixed;
+  .aside-show{
+    .sidebar-wrapper{
+      background-color: var(--color-bg-2);
+      position: fixed;
+      z-index: 10000;
+    }
+    .sidebar-shadow{
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: var(--color-bg-4);
+    }
   }
 }
