--- a/src/scss/helpers/_element-edit.scss
+++ b/src/scss/helpers/_element-edit.scss
@@ -29,12 +29,14 @@
 
 .el-card {
   margin-bottom: 20px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px var(--color-bg-4);
   border: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--color-bg-4);
   color: rgba(255, 255, 255, 0.85);
 }
-
+.el-card.is-always-shadow, .el-card.is-hover-shadow:focus, .el-card.is-hover-shadow:hover{
+  box-shadow: 0 2px 10px var(--color-bg-4);
+}
 .el-card__header {
   border-bottom: 1px solid rgba(255, 255, 255, 0.12);
   padding: .75rem 1.25rem;
@@ -47,5 +49,10 @@
 
   .el-dropdown {
     color: rgba(255, 255, 255, 0.85);
+  }
+}
+@media only screen and (max-width: 1024px){
+  .el-collapse-item__header{
+    color: var(--color-fg-0);
   }
 }
