--- a/src/scss/components/_aside.scss
+++ b/src/scss/components/_aside.scss
@@ -67,7 +67,7 @@
   }
 }
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1024px) {
   .logo {
     a {
       .logo-text {
@@ -75,6 +75,7 @@
       }
     }
   }
+
   .menu-list {
     margin: 0;
     padding: 0;
@@ -93,8 +94,8 @@
         &:hover,
         &.active {
           color: var(--color-fg-0);
-          background-color: rgba(255, 255, 255, 0.15);
-          border-left: 3px solid rgba(255, 255, 255, 0.9);
+          background-color: var(--color-bg-1);
+          border-left: 3px solid var(--color-bg-3);
         }
       }
     }
